@@ -64,3 +64,6 @@ FORMS += \
 
 RESOURCES += \
     res/img.qrc
+
+TRANSLATIONS +=  \
+                res/zh_CN.ts \
