@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE TS>
-<TS version="2.1">
+<TS version="2.1" language="zh_CN">
 <context>
     <name>Widget</name>
     <message>
-        <location filename="../../kds/widget.ui" line="14"/>
+        <location filename="../widget.ui" line="14"/>
         <source>KDS</source>
         <translation>系统投屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.ui" line="95"/>
+        <location filename="../widget.ui" line="95"/>
         <source>System Screen Projection</source>
         <translation>系统投屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.ui" line="126"/>
+        <location filename="../widget.ui" line="126"/>
         <source>FirstOutput:</source>
         <translation>第一屏幕：</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.cpp" line="133"/>
+        <location filename="../widget.cpp" line="130"/>
         <source>First Screen</source>
         <translation>第一屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.cpp" line="138"/>
+        <location filename="../widget.cpp" line="135"/>
         <source>Clone Screen</source>
         <translation>镜像屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.cpp" line="143"/>
+        <location filename="../widget.cpp" line="140"/>
         <source>Extend Screen</source>
         <translation>扩展屏</translation>
     </message>
     <message>
-        <location filename="../../kds/widget.cpp" line="148"/>
+        <location filename="../widget.cpp" line="145"/>
         <source>Vice Screen</source>
         <translation>其他屏</translation>
     </message>
