@@ -10,6 +10,3 @@ SUBDIRS =  \
     registerdbus \
     daemon2
 
-TRANSLATIONS +=  \
-                shared/i18n/zh_CN.ts \
-
