@@ -12,5 +12,6 @@
         <file>img/CameraOn.png</file>
         <file>img/FlightOff.png</file>
         <file>img/FlightOn.png</file>
+        <file>zh_CN.qm</file>
     </qresource>
 </RCC>
