@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.1" language="zh_CN">
+<context>
+    <name>Widget</name>
+    <message>
+        <location filename="../widget.cpp" line="138"/>
+        <source>Airplane Mode</source>
+        <translation>飞行模式</translation>
+    </message>
+</context>
+</TS>
